--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html>
-    <head>Basic git</head>
+    <head>Basic git with vs code</head>
     </html>
         <body>
-            <h1>this is header</h1>
-            <p>
-                this is paragraph
-            </p>
+          
+            <p>this is paragraph </p>
+            <p>this is paragraph 2</p>
         </body>
     
 </html>
