add ku src link

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
             <p>this is paragraph 2</p>
             <a href="http://www.google.co.th">google</a>
             <a href="http://www.youtube.com">youtube</a>
+            <a href="http://www.src.ku.ac.th">KU SRC</a>
         </body>
     
 </html>
